Implement git cloning support

--- a/nix-path.cabal
+++ b/nix-path.cabal
@@ -22,8 +22,13 @@ Executable nix-path
     , bytestring
     , containers
     , data-fix
+    , directory
     , filepath
     , hnix
     , hweblib
+    , process
+    , split
     , text
     , unix
+    , uuid
+    , xdg-basedir
