License and README updates

--- a/nix-path.cabal
+++ b/nix-path.cabal
@@ -1,11 +1,9 @@
 Name:                nix-path
 Version:             0.0.1
 Synopsis:            nix-path
-Description:
-  nix-path
-
-Author:              Rickard Nilsson
-Maintainer:          rickynils@gmail.com
+License:             MIT
+License-file:        LICENSE
+Author:              Rickard Nilsson <rickynils@gmail.com>
 Category:            Nix
 Build-type:          Simple
 Cabal-version:       >=1.10
@@ -14,8 +12,6 @@ Executable nix-path
   Default-language: Haskell2010
   Main-is: Main.hs
   Ghc-options: -Wall
-  Default-extensions:
-    OverloadedStrings
   Build-depends:
       base  >= 4.3 && < 5
     , attoparsec
