--- a/nix-path.cabal
+++ b/nix-path.cabal
@@ -18,7 +18,7 @@ Executable nix-path
     , attoparsec
     , bytestring
     , containers
-    , data-fix
+    , data-fix >= 0.0.7
     , directory
     , dirstream
     , filepath
